--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1060,7 +1060,7 @@ video {
 
 .border-green {
   --tw-border-opacity: 1;
-  border-color: rgb(0 100 1 / var(--tw-border-opacity));
+  border-color: rgb(179 144 62 / var(--tw-border-opacity));
 }
 
 .border-lightgray {
@@ -1070,27 +1070,27 @@ video {
 
 .border-lightgreen {
   --tw-border-opacity: 1;
-  border-color: rgb(216 193 30 / var(--tw-border-opacity));
+  border-color: rgb(239 210 110 / var(--tw-border-opacity));
 }
 
 .bg-darkgray {
   --tw-bg-opacity: 1;
-  background-color: rgb(5 22 26 / var(--tw-bg-opacity));
+  background-color: rgb(4 32 54 / var(--tw-bg-opacity));
 }
 
 .bg-darkgreen {
   --tw-bg-opacity: 1;
-  background-color: rgb(7 46 51 / var(--tw-bg-opacity));
+  background-color: rgb(0 77 71 / var(--tw-bg-opacity));
 }
 
 .bg-green {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
+  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
 }
 
 .bg-lightgreen {
   --tw-bg-opacity: 1;
-  background-color: rgb(216 193 30 / var(--tw-bg-opacity));
+  background-color: rgb(239 210 110 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1099,11 +1099,11 @@ video {
 }
 
 .fill-darkgreen {
-  fill: #072E33;
+  fill: #004d47;
 }
 
 .fill-green {
-  fill: #006401;
+  fill: #b3903e;
 }
 
 .fill-white {
@@ -1184,6 +1184,11 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-1 {
@@ -1300,12 +1305,12 @@ video {
 
 .text-darkgray {
   --tw-text-opacity: 1;
-  color: rgb(5 22 26 / var(--tw-text-opacity));
+  color: rgb(4 32 54 / var(--tw-text-opacity));
 }
 
 .text-darkgreen {
   --tw-text-opacity: 1;
-  color: rgb(7 46 51 / var(--tw-text-opacity));
+  color: rgb(0 77 71 / var(--tw-text-opacity));
 }
 
 .text-gray-300 {
@@ -1335,7 +1340,7 @@ video {
 
 .text-green {
   --tw-text-opacity: 1;
-  color: rgb(0 100 1 / var(--tw-text-opacity));
+  color: rgb(179 144 62 / var(--tw-text-opacity));
 }
 
 .text-lightgray {
@@ -1345,7 +1350,7 @@ video {
 
 .text-lightgreen {
   --tw-text-opacity: 1;
-  color: rgb(216 193 30 / var(--tw-text-opacity));
+  color: rgb(239 210 110 / var(--tw-text-opacity));
 }
 
 .text-pink-600 {
@@ -1427,23 +1432,23 @@ video {
 
 .btn-lightgreen {
   --tw-bg-opacity: 1;
-  background-color: rgb(216 193 30 / var(--tw-bg-opacity));
+  background-color: rgb(239 210 110 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: rgb(7 46 51 / var(--tw-text-opacity));
+  color: rgb(0 77 71 / var(--tw-text-opacity));
 }
 
 .btn-lightgreen:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
+  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: rgb(216 193 30 / var(--tw-text-opacity));
+  color: rgb(239 210 110 / var(--tw-text-opacity));
 }
 
 .btn-green {
   --tw-bg-opacity: 1;
-  background-color: rgb(7 46 51 / var(--tw-bg-opacity));
+  background-color: rgb(0 77 71 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: rgb(216 193 30 / var(--tw-text-opacity));
+  color: rgb(239 210 110 / var(--tw-text-opacity));
 }
 
 /* rotate */
@@ -1571,7 +1576,7 @@ video {
 
 .swiper-pagination-bullet-active {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
+  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
 }
 
 .swiper-button-prev::after {
@@ -1643,7 +1648,7 @@ video {
   font-weight: 500;
   text-transform: uppercase;
   --tw-text-opacity: 1;
-  color: rgb(5 22 26 / var(--tw-text-opacity));
+  color: rgb(4 32 54 / var(--tw-text-opacity));
 }
 
 /* garis progress */
@@ -1654,7 +1659,7 @@ video {
   width: 100%;
   border-radius: 9999px;
   --tw-bg-opacity: 1;
-  background-color: rgb(216 193 30 / var(--tw-bg-opacity));
+  background-color: rgb(239 210 110 / var(--tw-bg-opacity));
   content: '';
 }
 
@@ -1663,7 +1668,7 @@ video {
   height: 0.25rem;
   border-radius: 9999px;
   --tw-bg-opacity: 1;
-  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
+  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
   content: '';
 }
 
@@ -1678,7 +1683,7 @@ video {
   width: 0px;
   overflow: hidden;
   --tw-bg-opacity: 1;
-  background-color: rgb(5 22 26 / var(--tw-bg-opacity));
+  background-color: rgb(4 32 54 / var(--tw-bg-opacity));
   transition-property: all;
   transition-duration: 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1713,7 +1718,7 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding-left: 0.75rem;
   --tw-text-opacity: 1;
-  color: rgb(5 22 26 / var(--tw-text-opacity));
+  color: rgb(4 32 54 / var(--tw-text-opacity));
 }
 
 .sidebar-menu li {
@@ -1730,7 +1735,7 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding-left: 0.75rem;
   --tw-text-opacity: 1;
-  color: rgb(5 22 26 / var(--tw-text-opacity));
+  color: rgb(4 32 54 / var(--tw-text-opacity));
 }
 
 .profil {
@@ -1794,12 +1799,12 @@ video {
 
 .hover\:bg-green:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
+  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
 }
 
 .hover\:text-green:hover {
   --tw-text-opacity: 1;
-  color: rgb(0 100 1 / var(--tw-text-opacity));
+  color: rgb(179 144 62 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
@@ -1815,12 +1820,12 @@ video {
 
 .group:hover .group-hover\:text-green {
   --tw-text-opacity: 1;
-  color: rgb(0 100 1 / var(--tw-text-opacity));
+  color: rgb(179 144 62 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:text-lightgreen {
   --tw-text-opacity: 1;
-  color: rgb(216 193 30 / var(--tw-text-opacity));
+  color: rgb(239 210 110 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -1975,7 +1980,7 @@ video {
 
   .lg\:bg-green {
     --tw-bg-opacity: 1;
-    background-color: rgb(0 100 1 / var(--tw-bg-opacity));
+    background-color: rgb(179 144 62 / var(--tw-bg-opacity));
   }
 
   .lg\:p-3 {
@@ -2014,7 +2019,7 @@ video {
 
   .lg\:hover\:bg-darkgreen:hover {
     --tw-bg-opacity: 1;
-    background-color: rgb(7 46 51 / var(--tw-bg-opacity));
+    background-color: rgb(0 77 71 / var(--tw-bg-opacity));
   }
 
   .group:hover .lg\:group-hover\:scale-110 {
