--- a/public/css/app.css
+++ b/public/css/app.css
@@ -555,10 +555,6 @@ video {
   visibility: collapse;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -567,16 +563,8 @@ video {
   position: relative;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .left-0 {
   left: 0px;
-}
-
-.right-0 {
-  right: 0px;
 }
 
 .right-3 {
@@ -591,10 +579,6 @@ video {
   top: 0px;
 }
 
-.top-3 {
-  top: 0.75rem;
-}
-
 .top-5 {
   top: 1.25rem;
 }
@@ -603,20 +587,12 @@ video {
   z-index: 10;
 }
 
-.z-\[999\] {
-  z-index: 999;
-}
-
 .col-auto {
   grid-column: auto;
 }
 
 .m-0 {
   margin: 0px;
-}
-
-.m-5 {
-  margin: 1.25rem;
 }
 
 .m-auto {
@@ -641,6 +617,11 @@ video {
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .my-0 {
@@ -869,10 +850,6 @@ video {
   width: 13rem;
 }
 
-.w-72 {
-  width: 18rem;
-}
-
 .w-8 {
   width: 2rem;
 }
@@ -917,14 +894,6 @@ video {
   --tw-scale-x: .75;
   --tw-scale-y: .75;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.cursor-pointer {
-  cursor: pointer;
 }
 
 .flex-row {
@@ -1082,11 +1051,6 @@ video {
   background-color: rgb(5 22 26 / var(--tw-bg-opacity));
 }
 
-.bg-darkgreen {
-  --tw-bg-opacity: 1;
-  background-color: rgb(7 46 51 / var(--tw-bg-opacity));
-}
-
 .bg-green {
   --tw-bg-opacity: 1;
   background-color: rgb(0 100 1 / var(--tw-bg-opacity));
@@ -1108,10 +1072,6 @@ video {
 
 .fill-green {
   fill: #006401;
-}
-
-.fill-white {
-  fill: #fff;
 }
 
 .object-cover {
@@ -1200,10 +1160,6 @@ video {
 
 .pb-3 {
   padding-bottom: 0.75rem;
-}
-
-.pb-\[100\%\] {
-  padding-bottom: 100%;
 }
 
 .pl-16 {
@@ -1360,10 +1316,6 @@ video {
 
 .underline {
   text-decoration-line: underline;
-}
-
-.opacity-0 {
-  opacity: 0;
 }
 
 .shadow {
@@ -1853,10 +1805,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:relative {
-    position: relative;
-  }
-
   .md\:mx-3 {
     margin-left: 0.75rem;
     margin-right: 0.75rem;
