--- a/public/css/app.css
+++ b/public/css/app.css
@@ -842,6 +842,80 @@ video {
   height: 100%;
 }
 
+.h-52 {
+  height: 13rem;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-\[100rem\] {
+  height: 100rem;
+}
+
+.h-\[50em\] {
+  height: 50em;
+}
+
+.h-\[2rem\] {
+  height: 2rem;
+}
+
+.h-\[10rem\] {
+  height: 10rem;
+}
+
+.h-\[20rem\] {
+  height: 20rem;
+}
+
+.h-\[20\.5rem\] {
+  height: 20.5rem;
+}
+
+.h-\[22rem\] {
+  height: 22rem;
+}
+
+.h-\[50rem\] {
+  height: 50rem;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.h-\[70rem\] {
+  height: 70rem;
+}
+
+.h-\[80rem\] {
+  height: 80rem;
+}
+
+.h-\[78\.4rem\] {
+  height: 78.4rem;
+}
+
+.h-\[76\.4rem\] {
+  height: 76.4rem;
+}
+
+.h-\[77\.4rem\] {
+  height: 77.4rem;
+}
+
 .max-h-20 {
   max-height: 5rem;
 }
@@ -1044,10 +1118,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1071,10 +1141,6 @@ video {
 
 .border-b-2 {
   border-bottom-width: 2px;
-}
-
-.border-l-4 {
-  border-left-width: 4px;
 }
 
 .border-t {
@@ -1141,6 +1207,10 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-14 {
@@ -1239,10 +1309,6 @@ video {
   padding-left: 0.5rem;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1259,6 +1325,10 @@ video {
   text-align: right;
 }
 
+.font-sans {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1267,6 +1337,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-lg {
@@ -1343,11 +1418,6 @@ video {
 .text-darkgreen {
   --tw-text-opacity: 1;
   color: rgb(7 46 51 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .text-gray-300 {
@@ -1883,11 +1953,6 @@ video {
 }
 
 @media (prefers-color-scheme: dark) {
-  .dark\:text-gray-600 {
-    --tw-text-opacity: 1;
-    color: rgb(75 85 99 / var(--tw-text-opacity));
-  }
-
   .dark\:text-lightgray {
     --tw-text-opacity: 1;
     color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1934,6 +1999,11 @@ video {
   .sm\:gap-y-20 {
     row-gap: 5rem;
   }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1956,6 +2026,10 @@ video {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:flex-nowrap {
+    flex-wrap: nowrap;
   }
 
   .md\:gap-5 {
@@ -2006,6 +2080,10 @@ video {
 
   .lg\:h-auto {
     height: auto;
+  }
+
+  .lg\:h-\[20\.5rem\] {
+    height: 20.5rem;
   }
 
   .lg\:w-1\/2 {
@@ -2092,6 +2170,12 @@ video {
   .lg\:hover\:bg-darkgreen:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(7 46 51 / var(--tw-bg-opacity));
+  }
+
+  .lg\:hover\:shadow-lg:hover {
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
   .group:hover .lg\:group-hover\:scale-110 {
